# hoovy

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  default.nix  flake.nix  shell.nix  vcpkg-configuration.json  vcpkg.json
apps/: CMakeLists.txt
apps/hoovy/: CMakeLists.txt
apps/hoovy/src/: main.cpp  puppeteer.cpp
hoovy/: CMakeLists.txt  main.cpp
lib/include/hff/: format.hpp  frame_info.hpp  picture.hpp  stream_info.hpp  writer.hpp
lib/include/hff/writers/: rgb24.hpp
lib/src/: format.cpp  frame_info.cpp  picture.cpp  stream_info.cpp
sources/: CMakeLists.txt
sources/apps/hoovy/: CMakeLists.txt  main.cpp
sources/apps/hoovy/include/: puppeteer.hpp
sources/apps/hoovy/src/: main.cpp  puppeteer.cpp
sources/hff/: CMakeLists.txt
sources/hff/include/hff/: frame_info.hpp  pixel_format.hpp  stream_info.hpp
sources/hff/include/hff/detail_/: averror.hpp
sources/hff/include/hff/detail_/raii/: objects.hpp  raii_for_args.hpp
sources/hff/src/: format.cpp  stream_info.cpp  writer.cpp
sources/hff/src/writers/: rgb24.cpp
